--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -48,3 +48,9 @@
         font-size: 1rem;
     }
 }
+
+@media (max-width: 768px) {
+    .hero {
+        background-image: url('https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-APR-Promo-Hero-Mobile-v3.png');
+    }
+}
