--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -80,7 +80,7 @@
 .product-image img {
   width: 100%;
   height: 200px;
-  object-fit: cover;
+  object-fit: fill;
   border-bottom: 2px solid #eee;
 }
 
@@ -106,5 +106,25 @@
 
   .product-grid {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
+
+  .product-list-header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product-list-title {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  .home-button {
+    font-size: 0.9rem;
+    margin-top: 10px;
+  }
+
+  .product-image img {
+    height: 200px;
   }
 }
