implemented buildAndPrice. Site Final done

--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -11,11 +11,12 @@
 }
 
 .hero-content {
-    max-width: 600px;
+    margin-top: 1.5rem;
+    max-width: 620px;
 }
 
 .hero-content h1 {
-    font-size: 3rem;
+    font-size:3rem;
     margin-bottom: 1rem;
 }
 
